--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,12 @@ name = "weweb-dynamic-metadata"
 main = "src/index.ts"
 compatibility_date = "2024-04-19"
 compatibility_flags = ["nodejs_compat"]
+routes = [
+  { 
+		pattern = "griiingo.com", 
+		custom_domain = true 
+	}
+]
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Docs:
