--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,10 +4,7 @@ main = "src/index.ts"
 compatibility_date = "2024-04-19"
 compatibility_flags = ["nodejs_compat"]
 routes = [
-  { 
-		pattern = "griiingo.com", 
-		custom_domain = true 
-	}
+  { pattern = "griiingo.com", custom_domain = true }
 ]
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
