--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,6 +6,9 @@ compatibility_flags = ["nodejs_compat"]
 routes = [
   { pattern = "griiingo.com", custom_domain = true }
 ]
+# wrangler.toml (wrangler v3.88.0^)
+[observability.logs]
+enabled = true
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Docs:
